--- a/sapui5walkthrough/webapp/view/View1.view.xml
+++ b/sapui5walkthrough/webapp/view/View1.view.xml
@@ -8,7 +8,16 @@
         <App id="app">
             <pages>
                 <Page id="page" title="{i18n>title}">
-                    <content />
+                    <content>
+                        <Button
+                            text="Say Hello"
+                            press=".onShowHello"/>
+                        <!-- <Input 
+                            value="{/recipient/name}"
+                            description="Hello {/recipient/name}"
+                            valueLiveUpdate="ture"
+                            width="60%"/> -->
+                    </content>
                 </Page>
             </pages>
         </App>
