--- a/sapui5walkthrough/webapp/view/View1.view.xml
+++ b/sapui5walkthrough/webapp/view/View1.view.xml
@@ -10,12 +10,12 @@
                 <Page id="page" title="{i18n>title}">
                     <content>
                         <Button
-                            text="Say Hello"
+                            text="{i18n>showHelloButtonText}"
                             press=".onShowHello"/>
                         <Input 
                             value="{/recipient/name}"
                             description="Hello {/recipient/name}"
-                            valueLiveUpdate="ture"
+                            valueLiveUpdate="true"
                             width="60%"/>
                     </content>
                 </Page>
