--- a/sapui5walkthrough/webapp/view/View1.view.xml
+++ b/sapui5walkthrough/webapp/view/View1.view.xml
@@ -9,14 +9,16 @@
             <pages>
                 <Page id="page" title="{i18n>title}">
                     <content>
-                        <Button
-                            text="{i18n>showHelloButtonText}"
-                            press=".onShowHello"/>
-                        <Input 
-                            value="{/recipient/name}"
-                            description="Hello {/recipient/name}"
-                            valueLiveUpdate="true"
-                            width="60%"/>
+                        <Panel headerText="{i18n>helloPanelTitle}">
+                            <Button
+                                text="{i18n>showHelloButtonText}"
+                                press=".onShowHello"/>
+                            <Input 
+                                value="{/recipient/name}"
+                                description="Hello {/recipient/name}"
+                                valueLiveUpdate="true"
+                                width="60%"/>
+                        </Panel>
                     </content>
                 </Page>
             </pages>
