--- a/sapui5walkthrough/webapp/view/View1.view.xml
+++ b/sapui5walkthrough/webapp/view/View1.view.xml
@@ -9,15 +9,21 @@
             <pages>
                 <Page id="page" title="{i18n>title}">
                     <content>
-                        <Panel headerText="{i18n>helloPanelTitle}">
+                        <Panel 
+                            headerText="{i18n>helloPanelTitle}"
+                            class="sapUiResponsiveMargin"
+							width="auto">
                             <Button
                                 text="{i18n>showHelloButtonText}"
-                                press=".onShowHello"/>
+                                press=".onShowHello"
+                                class="sapUiSmallMarginEnd"/>
                             <Input 
                                 value="{/recipient/name}"
-                                description="Hello {/recipient/name}"
                                 valueLiveUpdate="true"
                                 width="60%"/>
+                            <Text
+								text="Hello {/recipient/name}"
+								class="sapUiSmallMargin"/>
                         </Panel>
                     </content>
                 </Page>
