invoice list displaying properly

--- a/sapui5walkthrough/webapp/view/View1.view.xml
+++ b/sapui5walkthrough/webapp/view/View1.view.xml
@@ -10,6 +10,7 @@
                 <Page id="page" title="{i18n>title}">
                     <content>
                         <mvc:XMLView viewName="mindset.curtiskettler.sapui5walkthrough.sapui5walkthrough.view.HelloPanel"/>
+                        <mvc:XMLView viewName="mindset.curtiskettler.sapui5walkthrough.sapui5walkthrough.view.InvoiceList"/>
                     </content>
                 </Page>
             </pages>
