--- a/sapui5walkthrough/webapp/view/InvoiceList.view.xml
+++ b/sapui5walkthrough/webapp/view/InvoiceList.view.xml
@@ -28,7 +28,8 @@
                 parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
                 type: 'sap.ui.model.type.Currency',
                 formatOptions: {
-                    showMeasure: false
+                    showMeasure: false,
+                    preserveDecimals: false
                 }
             }"
             numberUnit="{view>/currency}"
